Bind input values to attributes

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
     <p>{{hallowelt}}</p>
 </main>
 
-<h1>Hello Web Standard!</h1>
+<h1 id="webstandards">Hello Web Standard!</h1>
 <div>
-    <input type="text" placeholder="user hint"/>
+    <input id="userhint" type="text" placeholder="user hint"/>
     <input type="button" value="normal button"/>
     <input type="submit" value="submit button"/>
     <button>more flexible</button>
