Move embedded styles to external stylesheet

--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,10 @@
     <title>Hello World</title>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="#" />
+    <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/vue@next"></script>
     <script src="htmlgame.js" defer></script>
     <script src="app.js" defer></script>
-    <style>
-        p {
-            background-color: green;
-        }
-        .content {
-            background-color: red;
-        }
-        #detail {
-            background-color: yellow;
-        }
-    </style>
 </head>
 <body>
 <h1>HTML-Spiel</h1>
