Extract 'Neues von den Schwestern' to an own page

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
     <script src="app.js" defer></script>
 </head>
 <body>
+<ul>
+    <li>Web Standards</li>
+    <li><a href="schwester.html">Neues von den Schwestern</a></li>
+</ul>
 <h1>HTML-Spiel</h1>
 <noscript>Javascript benötigt.</noscript>
 <main>
@@ -38,18 +42,6 @@
     <textarea cols="30" rows="5"></textarea>
     <progress min="0" max="100" value="50"></progress>
     <meter low="20" min="0" high="66" max="100" value="90"></meter>
-</div>
-
-<h1>Neues von den Schwestern</h1>
-<div>
-    <input id="hauptmodul" type="number" placeholder="Hauptmodul" />
-    <input id="exponent" type="number" placeholder="Exponent" />
-</div>
-<div>
-    <textarea id="message" placeholder="Nachricht" rows="5"></textarea>
-</div>
-<div>
-    <textarea id="code" readonly placeholder="Code" rows="10"></textarea>
 </div>
 </body>
 </html>
