Extract 'HTML Game' to an own page

--- a/src/index.html
+++ b/src/index.html
@@ -5,21 +5,14 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="#" />
     <link rel="stylesheet" href="style.css">
-    <script src="https://unpkg.com/vue@next"></script>
-    <script src="htmlgame.js" defer></script>
     <script src="app.js" defer></script>
 </head>
 <body>
 <ul>
     <li>Web Standards</li>
+    <li><a href="htmlgame.html">HTML Game</a></li>
     <li><a href="schwester.html">Neues von den Schwestern</a></li>
 </ul>
-<h1>HTML-Spiel</h1>
-<noscript>Javascript benötigt.</noscript>
-<main>
-    <p>{{hallowelt}}</p>
-</main>
-
 <h1 id="webstandards">Hello Web Standard!</h1>
 <p>hello world</p>
 <p class="content">my content</p>
