Demonstrate rem and em

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,12 @@
 </ul>
 <h1 id="webstandards">Hello Web Standard!</h1>
 <p>hello world</p>
-<p class="content">my content</p>
-<p class="content" id="detail">detailed content</p>
+<section>
+    <p class="content">my content</p>
+</section>
+<section>
+    <p class="content" id="detail">detailed content</p>
+</section>
 <div>
     <input id="userhint" type="text" placeholder="user hint"/>
     <input type="button" value="normal button"/>
