Demonstrate fixed positioning

--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,6 @@
     <li><a href="schwester.html">Neues von den Schwestern</a></li>
 </ul>
 <h1 id="webstandards">Hello Web Standard!</h1>
-<p>hello world</p>
-<section>
-    <p class="content">my content</p>
-</section>
 <section>
     <p class="content" id="detail">detailed content</p>
 </section>
@@ -40,5 +36,7 @@
     <progress min="0" max="100" value="50"></progress>
     <meter low="20" min="0" high="66" max="100" value="90"></meter>
 </div>
+<p>hello world</p>
+<p class="content" id="last">my content</p>
 </body>
 </html>
