Add empty css playground

--- a/src/htmlgame.html
+++ b/src/htmlgame.html
@@ -11,6 +11,7 @@
 <body>
 <ul>
     <li><a href="index.html">Web Standards</a></li>
+    <li><a href="cssplayground.html">CSS Playground</a></li>
     <li>HTML Game</li>
     <li><a href="schwester.html">Neues von den Schwestern</a></li>
 </ul>
