--- a/src/schwester.html
+++ b/src/schwester.html
@@ -10,6 +10,7 @@
 <body>
 <ul>
     <li><a href="index.html">Web Standards</a></li>
+    <li><a href="cssplayground.html">CSS Playground</a></li>
     <li><a href="htmlgame.html">HTML Game</a></li>
     <li>Neues von den Schwestern</li>
 </ul>
