--- a/src/cssplayground.html
+++ b/src/cssplayground.html
@@ -14,5 +14,7 @@
     <li><a href="schwester.html">Neues von den Schwestern</a></li>
 </ul>
 <h1>CSS Playground</h1>
+<div>Content</div>
+<div>Another</div>
 </body>
 </html>
