Play with flex layout

--- a/src/cssplayground.html
+++ b/src/cssplayground.html
@@ -14,6 +14,9 @@
     <li><a href="schwester.html">Neues von den Schwestern</a></li>
 </ul>
 <h1>CSS Playground</h1>
-<div>Content</div>
+<div id="container">
+    <div class="content">Content A</div>
+    <div class="content">Content B</div>
+</div>
 </body>
 </html>
