Play more with flex layout

--- a/src/cssplayground.html
+++ b/src/cssplayground.html
@@ -15,8 +15,9 @@
 </ul>
 <h1>CSS Playground</h1>
 <div id="container">
-    <div class="content">Content A</div>
-    <div class="content">Content B</div>
+    <div class="content">Content 1</div>
+    <div class="content">Content 2</div>
+    <div class="content">Content 3</div>
 </div>
 </body>
 </html>
