Introduce a simple layout

--- a/src/cssplayground.html
+++ b/src/cssplayground.html
@@ -7,22 +7,26 @@
     <link rel="stylesheet" href="cssplayground.css">
 </head>
 <body>
-<ul>
-    <li><a href="index.html">Web Standards</a></li>
-    <li>CSS Playground</li>
-    <li><a href="htmlgame.html">HTML Game</a></li>
-    <li><a href="schwester.html">Neues von den Schwestern</a></li>
-</ul>
-<h1>CSS Playground</h1>
-<div id="container">
-    <div class="content">Content 1</div>
-    <div class="content">Content 2</div>
-    <div class="content">Content 3</div>
-    <div class="content">Content 4</div>
-    <div class="content">Content 5</div>
-    <div class="content">Content 6</div>
-    <div class="content">Content 7</div>
-    <div class="content">Content 8</div>
-</div>
+<section>
+    <header>
+        <h1>CSS Playground</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Web Standards</a></li>
+            <li>CSS Playground</li>
+            <li><a href="htmlgame.html">HTML Game</a></li>
+            <li><a href="schwester.html">Neues von den Schwestern</a></li>
+        </ul>
+    </nav>
+    <main>
+        <div class="content">Content 1</div>
+        <div class="content">Content 2</div>
+        <div class="content">Content 3</div>
+        <div class="content">Content 4</div>
+        <div class="content">Content 5</div>
+    </main>
+    <footer><small>Copyright notice</small></footer>
+</section>
 </body>
 </html>
