Switch to more complex layout

--- a/src/cssplayground.html
+++ b/src/cssplayground.html
@@ -25,6 +25,10 @@
         <div class="content">Content 3</div>
         <div class="content">Content 4</div>
         <div class="content">Content 5</div>
+        <div class="content">Content 6</div>
+        <div class="content">Content 7</div>
+        <div class="content">Content 8</div>
+        <div class="content">Content 9</div>
     </main>
     <footer><small>Copyright notice</small></footer>
 </section>
