--- a/src/cssplayground.html
+++ b/src/cssplayground.html
@@ -17,6 +17,8 @@
             <li>CSS Playground</li>
             <li><a href="htmlgame.html">HTML Game</a></li>
             <li><a href="schwester.html">Neues von den Schwestern</a></li>
+            <li><a href="https://airhacks.io">Online Workshops</a></li>
+            <li><a href="https://adambien.blog">Blog</a></li>
         </ul>
     </nav>
     <main>
