Prepare javascript section

--- a/src/cssplayground.html
+++ b/src/cssplayground.html
@@ -14,6 +14,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Web Standards</a></li>
+            <li><a href="index2.html">Classes in Javascript</a></li>
             <li>CSS Playground</li>
             <li><a href="htmlgame.html">HTML Game</a></li>
             <li><a href="schwester.html">Neues von den Schwestern</a></li>
