--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 <body>
 <ul>
     <li>Web Standards</li>
+    <li><a href="index2.html">Classes in Javascript</a></li>
     <li><a href="cssplayground.html">CSS Playground</a></li>
     <li><a href="htmlgame.html">HTML Game</a></li>
     <li><a href="schwester.html">Neues von den Schwestern</a></li>
