--- a/src/index2.html
+++ b/src/index2.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="#" />
     <link rel="stylesheet" href="style2.css">
-    <script src="app2.js" defer></script>
+    <script src="app2.js"type="module" defer></script>
 </head>
 <body>
 <ul>
