Add demo for class inheritance

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <li><a href="htmlgame.html">HTML Game</a></li>
     <li><a href="schwester.html">Neues von den Schwestern</a></li>
 </ul>
-<h1 id="webstandards">Hello Web Standard!</h1>
+<h1 id="webstandards">Hello Web Standards!</h1>
 <section>
     <p class="content" id="detail">detailed content</p>
 </section>
