--- a/src/index2.html
+++ b/src/index2.html
@@ -18,6 +18,7 @@
 <section>
     <div id="first">First</div>
     <div id="second">Second</div>
+    <input type="text" id="firstInput" placeholder="somevalue" />
 </section>
 </body>
 </html>
