Call the promise

--- a/src/index2.html
+++ b/src/index2.html
@@ -19,6 +19,7 @@
     <div id="first">First</div>
     <div id="second">Second</div>
     <input type="text" id="firstInput" placeholder="somevalue" />
+    <button id="slow">Answer</button>
 </section>
 </body>
 </html>
