Introduce a simple table

--- a/src/index2.html
+++ b/src/index2.html
@@ -19,6 +19,10 @@
     <div id="first">First</div>
     <div id="second">Second</div>
     <input type="text" id="firstInput" placeholder="somevalue" />
+    <table id="answers">
+        <thead><tr></tr></thead>
+        <tbody />
+    </table>
     <button id="slow">Answer</button>
 </section>
 </body>
